--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <body>
         <script src="index.js"></script>
         <h1>Rock Paper Scissors</h1>
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
     </body>
 </html>
