updated js based ui for RPS branch

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body>
-        <script src="index.js"></script>
         <h1>Rock Paper Scissors</h1>
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+        <button id="beginRound">Begin Round</button>
+        <script src="index.js"></script>
     </body>
 </html>
