updated spacing on boxes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
         <button id="beginRound">Begin Round</button>
+        <div id="pChoiceBox"></div>
+        <div id="rexultBox"></div>
+        <div id="scoreBox1"></div>
+        <div id="scoreBox2"></div>
         <script src="index.js"></script>
     </body>
 </html>
